--- a/example/static/css/style.css
+++ b/example/static/css/style.css
@@ -6,44 +6,7 @@
  * Made By MaterializeCSS.com
  */
 
-nav ul a,
-nav .brand-logo {
-  color: #444;
-}
-
-p {
-  line-height: 2rem;
-}
-
-.button-collapse {
-  color: #26a69a;
-}
-
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-  .parallax-container .section {
-    width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
+ body { background: url('../img/pexels-photo.jpg?v=1.0') top center no-repeat; background-size: cover; -o-background-size: cover; -webkit-background-size: cover; }
 
 .icon-block {
   padding: 0 15px;
@@ -52,6 +15,8 @@ p {
   font-size: inherit;
 }
 
-footer.page-footer {
-  margin: 0;
+.bg {
+	background: #FFF !important;
 }
+
+footer.page-footer { margin-top: 0; }
