--- a/example/views/footer.phtml
+++ b/example/views/footer.phtml
@@ -1,43 +1,40 @@
-<footer class="page-footer teal">
+
+  <footer class="page-footer light-blue">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it\'s our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+        <div class="col l10 s12">
+          <h5 class="white-text"><?=$this->config['name']?></h5>
+          <p class="grey-text text-lighten-4">I am a solo developer hoping to create the biggest and fastest next PHP template engine. Having been a developer for several years and acknowledging Smarty's existance through all of it. I am confident that I can build the fastest template engine!</p>
 
 
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
+        <div class="col l2 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><a class="white-text" href="https://github.com/CameronCT">GitHub</a></li>
+            <li><a class="white-text" href="mailto:admin@nerdsthatcode.com">Email</a></li>
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        &copy; <?=$this->config['name']?> 2016. Made by <a class="blue-text text-lighten-3" href="https://github.com/CameronCT/ezPHP" alt="GitHub"><i class="fa fa-github fa-lg"></i> CameronCT</a>
+        <span class="right">
+          <?=$this->load?> seconds
+        </span>
       </div>
     </div>
   </footer>
 
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <!-- jQuery -->
+  <script src="static/js/jquery.min.js"></script>
+
+  <!-- Materialize -->
   <script src="static/js/materialize.js"></script>
+
+  <!-- App -->
   <script src="static/js/init.js"></script>
 
   </body>
