12/10/2016 - Modified Cache, Changed File Structure

--- a/example/views/index.phtml
+++ b/example/views/index.phtml
@@ -6,7 +6,9 @@
         <h5 class="header col s12 light white-text">SmartyPHP inspired framework built for PHP 7 exclusively.</h5>
       </div>
       <div class="row center">
-        <a href="https://github.com/CameronCT/ezPHP" id="download-button" class="btn-large waves-effect waves-light blue">Get Started</a>
+        <a href="https://github.com/CameronCT/ezPHP" id="download-button" class="btn-large waves-effect waves-light blue">
+          VIEW ON GITHUB
+        </a>
       </div>
       <br><br>
 
