12/11/2016 - Fixed Cache.php, Added CDN / URL classes (very basic). Added clearCache(); which clears cache for a file.

--- a/example/views/footer.phtml
+++ b/example/views/footer.phtml
@@ -29,13 +29,13 @@
 
 
   <!-- jQuery -->
-  <script src="static/js/jquery.min.js"></script>
+  <script src="<?=CDN::for('static')?>/js/jquery.min.js"></script>
 
   <!-- Materialize -->
-  <script src="static/js/materialize.js"></script>
+  <script src="<?=CDN::for('static')?>/js/materialize.js"></script>
 
   <!-- App -->
-  <script src="static/js/init.js"></script>
+  <script src="<?=CDN::for('static')?>/js/init.js"></script>
 
   </body>
 </html>
