--- a/example/views/header.phtml
+++ b/example/views/header.phtml
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Materialize -->
-  <link href="static/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="<?=CDN::for('static')?>/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- Font Awesome -->
-  <link href="static/css/font-awesome.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="<?=CDN::for('static')?>/css/font-awesome.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!-- App -->
-  <link href="static/css/style.css?v=1.2" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="<?=CDN::for('static')?>/css/style.css?v=1.2" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
