--- a/example/views/alerts.phtml
+++ b/example/views/alerts.phtml
@@ -1,13 +1,13 @@
 <?php if (ALERT::check('Error')): ?>
 <div class="container">
-    <div class="card-panel">
-      <span class="blue-text text-darken-2">ERROR: <?=ALERT::get('Error')?></span>
+    <div class="card-panel red">
+      <span class="white-text"><?=ALERT::get('Error')?></span>
     </div>
 </div>
 <?php endif; if (ALERT::check('Success')): ?>
 <div class="container">
-    <div class="card-panel">
-      <span class="blue-text text-darken-2">SUCESSS: <?=ALERT::get('Success')?></span>
+    <div class="card-panel green">
+      <span class="white-text"><?=ALERT::get('Success')?></span>
     </div>
 </div>
 <?php endif; ?>
