--- a/example/views/header.phtml
+++ b/example/views/header.phtml
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title><?=$this->config['name']?> - <?=$this->title?></title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
 
-  <!-- Fonts  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title><?=$this->config['name']?> - <?=$this->title?></title>
 
-  <!-- Materialize -->
-  <link href="<?=CDN::for('static')?>/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- Bootstrap v4 -->
+    <link href="<?=CDN::for('static', '/css/bootstrap.min.css')?>" rel="stylesheet">
 
-  <!-- Font Awesome -->
-  <link href="<?=CDN::for('static')?>/css/font-awesome.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
-  <!-- App -->
-  <link href="<?=CDN::for('static')?>/css/style.css?v=1.2" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-<body>
+    <!-- App -->
+    <link href="<?=CDN::for('static', '/css/app.css')?>" rel="stylesheet">
+  </head>
+  <body>
